[package]
name = "tiny-rsx"
version = "0.3.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Jonah Lund <jonahlund@proton.me>"]
license = "MIT"
repository = "https://github.com/jonahlund/tiny-rsx"
documentation = "https://docs.rs/tiny-rsx"
description = """
A fast and minimal syn RSX (JSX in Rust) parser
"""

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
